issue #107: added tests for domain model and services and improved existing ones